UI: add fallback background on main window to avoid occasional flickering

--- a/src/css/component/window-wrapper.component.scss
+++ b/src/css/component/window-wrapper.component.scss
@@ -47,3 +47,12 @@ body {
 	padding: 10px;
 	padding-top: 0;
 }
+
+.background-backup {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-image: var(--window-background-image-backup);
+}
