--- a/src/css/themes/decktracker-theme.scss
+++ b/src/css/themes/decktracker-theme.scss
@@ -1,5 +1,10 @@
 :host.decktracker-theme,
 .decktracker-theme {
+	--window-background-image-backup: radial-gradient(
+		44.58% 50% at 50% 50%,
+		rgba(48, 35, 128, 1) 0%,
+		rgba(24, 24, 43, 1) 100%
+	);
 	--window-background-image: radial-gradient(
 			44.58% 50% at 50% 50%,
 			rgba(48, 35, 128, 0.7) 0%,
