--- a/src/css/themes/replays-theme.scss
+++ b/src/css/themes/replays-theme.scss
@@ -1,5 +1,10 @@
 :host.replays-theme,
 .replays-theme {
+	--window-background-image-backup: radial-gradient(
+		44.58% 50% at 50% 50%,
+		rgba(14, 72, 30, 1) 0%,
+		rgba(24, 43, 27, 1) 100%
+	);
 	--window-background-image: radial-gradient(
 			44.58% 50% at 50% 50%,
 			rgba(14, 72, 30, 0.7) 0%,
